--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 26 19:32:57 CET 2017
-sdk.dir=C\:\\Users\\Radek\\AppData\\Local\\Android\\Sdk
+#Mon Oct 02 17:45:25 CEST 2017
+sdk.dir=C\:\\Android\\sdk
